--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,15 @@ dependencies:
   http_multi_server: ^3.0.1
   http_parser: ^4.0.1
   meta: ^1.3.0
-  oauth2: ^2.0.0
   path: ^1.8.0
   pool: ^1.5.0
   pub_semver: ^2.1.0
   shelf: ^1.1.1
   source_span: ^1.8.1
   stack_trace: ^1.10.0
+  typed_data: ^1.3.1
   usage: ^4.0.2
+  vendor: ^0.9.2
   yaml: ^3.1.0
   yaml_edit: ^2.0.0
 
@@ -35,3 +36,4 @@ dev_dependencies:
   test: ^1.21.5
   test_descriptor: ^2.0.0
   test_process: ^2.0.0
+
