--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,9 @@
+# Dependabot configuration file.
+# See https://docs.github.com/en/code-security/dependabot/dependabot-version-updates
 version: 2
-enable-beta-ecosystems: true
+
 updates:
-  - package-ecosystem: "pub"
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "monthly"
