--- a/.github/workflows/no-response.yml
+++ b/.github/workflows/no-response.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: godofredoc/no-response@0ce2dc0e63e1c7d2b87752ceed091f6d32c9df09
         with:
-          responseRequiredLabel: "needs-info"
+          responseRequiredLabel: "needs info"
           responseRequiredColor: 4774bc
           daysUntilClose: 14
           # Comment to post when closing an Issue for lack of response.
