Added strict-cast to analysis_options.yaml and fixed the resulting errors.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,9 @@ analyzer:
   exclude:
    - lib/src/third_party/**
 
+  language:
+    strict-casts: true
+
 linter:
   rules:
     - avoid_catching_errors
