--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,6 +22,7 @@ linter:
     - avoid_unused_constructor_parameters
     - avoid_void_async
     - cancel_subscriptions
+    - dangling_library_doc_comments
     - directives_ordering
     - missing_whitespace_between_adjacent_strings
     - no_adjacent_strings_in_list
@@ -38,6 +39,9 @@ linter:
     - throw_in_finally
     - unawaited_futures
     - unnecessary_lambdas
+    - unnecessary_library_directive
     - unnecessary_null_aware_assignments
     - unnecessary_parenthesis
     - unnecessary_statements
+    - use_enums
+    - use_super_parameters
