--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shelf: ^1.1.1
   source_span: ^1.8.1
   stack_trace: ^1.10.0
+  tar: ^1.0.1
   typed_data: ^1.3.1
   usage: ^4.0.2
   yaml: ^3.1.0
@@ -36,4 +37,3 @@ dev_dependencies:
   test: ^1.21.5
   test_descriptor: ^2.0.0
   test_process: ^2.0.0
-  vendor: ^0.9.5
