--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   stack_trace: ^1.10.0
   tar: ^1.0.1
   typed_data: ^1.3.1
-  usage: ^4.0.2
+  unified_analytics: ^4.0.1
   yaml: ^3.1.0
   yaml_edit: ^2.0.0
 
