--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -60,15 +60,5 @@ jobs:
         run: dart pub get
       - name: Build snapshot
         run: dart --snapshot=${{ env._PUB_TEST_SNAPSHOT }} bin/pub.dart
-      - name: Select tests
-        run: |
-          find test -name "*_test\\.dart" | sort > $_TESTS_FILE
-          (( tests_per_shard = ($(wc -l <$_TESTS_FILE) + 7 - 1) / 7 ))
-          (( offset = 1 + tests_per_shard * ${{ matrix.shard }} ))
-          tail -n+$offset $_TESTS_FILE | head -n$tests_per_shard > $_TESTS_FILE.${{ matrix.shard }}
-          echo 'TEST FILES SELECTED:'
-          cat "$_TESTS_FILE.${{ matrix.shard }}"
-        shell: bash
       - name: Run tests
-        run: dart test --preset travis $(cat $_TESTS_FILE.${{ matrix.shard }})
-        shell: bash
+        run: dart test --preset ci --total-shards=7 --shard-index=${{ matrix.shard }}
