--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,33 +4,33 @@ environment:
   sdk: ^3.2.0
 
 dependencies:
-  analyzer: ^6.2.0
-  args: ^2.4.0
-  async: ^2.6.1
-  checks: ^0.2.2
-  cli_util: ^0.4.0
-  collection: ^1.15.0
-  convert: ^3.0.2
-  crypto: ^3.0.1
+  analyzer: ^6.3.0
+  args: ^2.4.2
+  async: ^2.11.0
+  cli_util: ^0.4.1
+  collection: ^1.18.0
+  convert: ^3.1.1
+  crypto: ^3.0.3
   frontend_server_client: ^3.2.0
-  http: "^1.0.0"
-  http_multi_server: ^3.0.1
-  http_parser: ^4.0.1
-  meta: ^1.3.0
-  path: ^1.8.0
-  pool: ^1.5.0
-  pub_semver: ^2.1.0
-  shelf: ^1.1.1
-  source_span: ^1.8.1
-  stack_trace: ^1.10.0
-  tar: ^1.0.1
-  typed_data: ^1.3.1
-  yaml: ^3.1.0
-  yaml_edit: ^2.0.0
+  http: ^1.1.2
+  http_multi_server: ^3.2.1
+  http_parser: ^4.0.2
+  meta: ^1.11.0
+  path: ^1.9.0
+  pool: ^1.5.1
+  pub_semver: ^2.1.4
+  shelf: ^1.4.1
+  source_span: ^1.10.0
+  stack_trace: ^1.11.1
+  tar: ^1.0.3
+  typed_data: ^1.3.2
+  yaml: ^3.1.2
+  yaml_edit: ^2.1.1
 
 dev_dependencies:
+  checks: ^0.2.2
   lints: ^3.0.0
-  shelf_test_handler: ^2.0.0
-  test: ^1.21.5
-  test_descriptor: ^2.0.0
-  test_process: ^2.0.0
+  shelf_test_handler: ^2.0.2
+  test: ^1.24.9
+  test_descriptor: ^2.0.1
+  test_process: ^2.1.0
