--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   convert: ^3.1.1
   crypto: ^3.0.3
   frontend_server_client: ^4.0.0
+  glob: ^2.1.2
   http: ^1.1.2
   http_multi_server: ^3.2.1
   http_parser: ^4.0.2
