--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -45,4 +45,5 @@ linter:
     - unnecessary_library_directive
     - unnecessary_parenthesis
     - unnecessary_statements
+    - unreachable_from_main
     - use_enums
