--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
 
 dev_dependencies:
   checks: ^0.3.0
-  lints: ^4.0.0
+  dart_flutter_team_lints: ^3.1.0
   shelf_test_handler: ^2.0.2
   test: ^1.24.9
   test_descriptor: ^2.0.1
