--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,6 +6,9 @@ analyzer:
     unused_local_variable: error
     dead_code: error
     todo: ignore
+    avoid_dynamic_calls: ignore # TODO(mosum): fix the offending lines
+    lines_longer_than_80_chars: ignore # TODO(mosum): fix the offending lines
+    comment_references: ignore # TODO(mosum): fix the offending lines
   exclude:
    - lib/src/third_party/**
 
