Fix a batch of long lines
Enable lines_longer_than_80_chars lint and fix the first ~100
diagnostics.

Only a very small number felt like they might be toil during normal
editing.
The vast majority felt like they would be mostly unobtrusive if they had
surfaced during normal editing instead of all in a batch.

Quite a few of the fixes improve readability. None of the fixes harm
readability.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -25,6 +25,7 @@ linter:
     - cancel_subscriptions
     - directives_ordering
     - library_annotations
+    - lines_longer_than_80_chars
     - missing_whitespace_between_adjacent_strings
     - no_adjacent_strings_in_list
     - no_runtimeType_toString
