--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,10 @@
-include: package:lints/recommended.yaml
+include: package:dart_flutter_team_lints/analysis_options.yaml
 
 analyzer:
+  errors:
+    avoid_dynamic_calls: ignore # TODO(mosum): fix the offending lines
+    lines_longer_than_80_chars: ignore # TODO(mosum): fix the offending lines
+    comment_references: ignore # TODO(mosum): fix the offending lines
   exclude:
    - lib/src/third_party/**
 
