--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   convert: ^3.1.2
   crypto: ^3.0.6
   frontend_server_client: ^4.0.0
+  glob: ^2.1.3
   graphs: ^2.3.2
   http: ^1.5.0
   http_multi_server: ^3.2.2
