--- a/.github/workflows/tag_from_sdk.yml
+++ b/.github/workflows/tag_from_sdk.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   tag_from_sdk:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
