--- a/dart_test.yaml
+++ b/dart_test.yaml
@@ -1,3 +1,13 @@
+platforms:
+  - chrome
+  - vm
+# TODO: Consider testing on Firefox
+
+compilers:
+ - dart2wasm
+ - source
+# TODO: Consider testing with dart2js
+
 presets:
   ci:
     timeout: 3x
